# oak_detector

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE
.devcontainer/: devcontainer.json
docker/: Dockerfile  compose.yml
launch/: detector.launch.py
oak_detector/: CMakeLists.txt  package.xml
oak_detector/include/oak_detector/: camera_node.h  pipeline.h
oak_detector/launch/: detector.py
oak_detector/src/: camera_node.cpp  main.cpp  pipeline.cpp
oak_detector_vis/: .gitignore  CMakeLists.txt  package.xml
oak_detector_vis/launch/: visualizer.py
oak_detector_vis/src/: main.cpp
src/: main.cpp  pipeline.cpp
trigger_vision_docker/: Dockerfile  compose.yml
