<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak_detector</name>
  <version>0.0.0</version>
  <description>Object detector using the OAK-D Pro</description>
  <maintainer email="krepa098@gmail.com">Paul Kremer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend> 
  <depend>depthai_bridge</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
